project('Alan compiler', 'c',
  version : '3.0beta8',
  default_options : ['warning_level=3'])

interpreter_includes = include_directories('../interpreter')
iconv = dependency('iconv')

executable('alan',
           'lmList.c',
           'opt.c',
           'vrb.c',
           'evt.c',
           'msg.c',
           'pmErr.c',
           'stm.c',
           'elm.c',
           'initialize.c',
           'resource.c',
           'description.c',
           'util.c',
           'pmParse.c',
           'ifid.c',
           'srcp.c',
           'scr.c',
           'cnt.c',
           'res.c',
           'ext.c',
           'emit.c',
           'article.c',
           'nam.c',
           'str.c',
           'prop.c',
           'stx.c',
           'exp.c',
           'set.c',
           'atr.c',
           'encode.c',
           'whr.c',
           'chk.c',
           'sysdep.c',
           'wrd.c',
           'dump.c',
           'cla.c',
           'sym.c',
           'main.c',
           'type.c',
           'spa.c',
           'gopt.c',
           'ins.c',
           'smScan.c',
           'lim.c',
           'charset.c',
           'sco.c',
           'add.c',
           'context.c',
           'timing.c',
           'stp.c',
           'rul.c',
           'syn.c',
           'alan.c',
           'pmPaSema.c',
           'smScSema.c',
           'wht.c',
           'adv.c',
           'options.c',
           'converter.c',
           'alt.c',
           'lst.c',
           'id.c',
           'lmlog.c',
           'alan.version.c',
           include_directories : interpreter_includes,
           dependencies : iconv)
